--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The one and only, the legend, the disruptor, the all-seeing eye, the master, the bot.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node dist/index.js",
+    "watch": "tsc -w index.ts & nodemon -q -w index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,11 @@
   "dependencies": {
     "@slack/events-api": "^3.0.0",
     "@slack/web-api": "^6.1.0",
-    "mqtt": "^4.2.6"
+    "dotenv": "^8.2.0",
+    "mqtt": "^4.2.6",
+    "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
