--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   },
   "homepage": "https://github.com/lahdekorpi/toimistobotti#readme",
   "dependencies": {
+    "@aoberoi/passport-slack": "^1.0.5",
     "@slack/events-api": "^3.0.0",
     "@slack/web-api": "^6.1.0",
+    "@types/passport": "^1.0.6",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "mqtt": "^4.2.6",
+    "node-localstorage": "^2.1.6",
+    "passport": "^0.4.1",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
