--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "watch": "tsc -w index.ts & nodemon -q -w index.js"
+    "watch": "tsc -w & nodemon -q -w dist/index.js",
+		"build": "tsc --sourceMap false",
+		"watch-node": "echo 'IT IS npm run watch, you moron...' && npm run watch",
+		"lint": "tslint -c tslint.json -p tsconfig.json --fix"
   },
   "repository": {
     "type": "git",
@@ -30,6 +33,7 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "tslint": "^6.1.3"
   }
 }
