--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "tsc && node dist/index.js",
     "watch": "tsc -w & nodemon -q -w dist dist/index.js",
-		"build": "tsc --sourceMap false",
-		"watch-node": "echo 'IT IS npm run watch, you moron...' && npm run watch",
-		"lint": "tslint -c tslint.json -p tsconfig.json --fix"
+    "build": "tsc --sourceMap false",
+    "watch-node": "echo 'IT IS npm run watch, you moron...' && npm run watch",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,8 @@
     "mqtt": "^4.2.6",
     "node-localstorage": "^2.1.6",
     "passport": "^0.4.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
