--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "yaml": "^1.10.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/qs": "^6.9.6",
     "nodemon": "^2.0.7",
     "tslint": "^6.1.3"
   }
