--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
 SLACK_TOKEN=xoxb-7723423423-asdasdasdasdasdadasdasd
-LOL_SLACK_CHANNEL=C00BADA55
 SLACK_CHANNEL=U0B00B5
 SLACK_SIGNING_SECRET=cccccc3bdd37cccca01ccc2c1ccccccc
 SLACK_BOT_ID=DB4D46TTTKN
+
 STATUS_FILE=/tmp/alarm-status
+
+MQTT=mqtt://client:ffplip12@10.0.0.120
+MQTT_TOPIC=tele/tasmota_C3536E/RESULT
+
+CAM_USERNAME_1=user
+CAM_PASSWORD_1=password
+CAM_USERNAME_2=user
+CAM_PASSWORD_2=password
