--- a/actions.yaml.example
+++ b/actions.yaml.example
@@ -15,3 +15,10 @@ rfid:
     type: button
     name: Ovikello
     action: doorBell
+cameras:
+  - name: Neukkari A (oven suuntaan)
+    id: 1
+    api: http://localhost:8880
+  - name: Neukkari B (ovelta)
+    id: 2
+    api: http://localhost:8881
