--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/lahdekorpi/toimistobotti#readme",
   "dependencies": {
     "@slack/web-api": "^6.1.0",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mqtt": "^4.2.6",
