--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+
+PORT=1337
+
+MQTT=mqtt://username:password@10.0.0.120
+MQTT_TOPIC=tele/tasmota_C3536E/RESULT
+
 SLACK_TOKEN=xoxb-7723423423-asdasdasdasdasdadasdasd
 SLACK_CHANNEL=U0B00B5
 SLACK_SIGNING_SECRET=cccccc3bdd37cccca01ccc2c1ccccccc
@@ -5,12 +11,8 @@ SLACK_BOT_ID=DB4D46TTTKN
 
 STATUS_FILE=/tmp/alarm-status
 
-MQTT=mqtt://client:ffplip12@10.0.0.120
-MQTT_TOPIC=tele/tasmota_C3536E/RESULT
-
 CAM_USERNAME_1=user
 CAM_PASSWORD_1=password
+
 CAM_USERNAME_2=user
 CAM_PASSWORD_2=password
-
-PORT=1337
